--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -261,9 +261,9 @@
             <h1 class="fs-2 p-2 text-center">Хочешь поделиться идей или посмотреть что сделали другие?</h1>
             <p class="p-2 fs-4 text-center">Ваш взгляд ценен! Предложите свои идеи или ознакомьтесь с тем, что уже сделали другие участники.</p>
                 <div class="row mt-5">
-                    <div class="row justify-content-center">
-                        <div class="col-sm-3 mx-5 mb-3 mb-sm-0">
-                          <div class="card shadow-lg">
+                    <div class="row justify-content-center mb-5">
+                        <div class="col-sm-3 mb-3 mb-sm-0">
+                          <div class="card shadow-lg p-3">
                             <div class="card-body text-center">
                               <p class="card-text fs-6 text-start">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
                               <a class="btn btn-outline-dark rounded-3" href={% url 'completedProjects' %}>Выполненные проекты</a>
@@ -271,8 +271,8 @@
                           </div>
                         </div>
 
-                        <div class="col-sm-3 mx-5 mb-3 mb-sm-0">
-                          <div class="card shadow-lg">
+                        <div class="col-sm-3 mb-3 mb-sm-0">
+                          <div class="card shadow-lg p-3">
                             <div class="card-body text-center">
                               <p class="card-text fs-6 text-start">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
                               <button type="button" class="btn btn-outline-dark rounded-3" data-bs-toggle="modal" data-bs-target="#invite-prj">Предложить проект</button>
