--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -285,7 +285,7 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid text-body-secondary bg-primary">
+        <div class="container-fluid bg-light">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-3">
