--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -211,7 +211,7 @@
                                     <h5 class="card-title">{{card.project_name}}</h5>
                                     <p class="card-text text-truncate">{{card.project_description}}</p>
                                     <div class="position-absolute bottom-0 py-2 d-flex justify-content-end">
-                                        <a href="subProjects/{{card.project_id}}" class="btn btn-primary">Изучить проект</a>
+                                        <a href="subProjects/{{card.project_id}}" class="btn btn-sm btn-outline-dark rounded-3">Изучить проект</a>
                                     </div>
                                 </div>
                             </div>
