upd: index, compProjects, subProjects.html

--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -127,9 +127,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{card.comp_project_name}}</h5>
                             <p class="card-text">{{card.comp_project_description}}</p>
-                            <div class="position-absolute bottom-0 py-2 d-flex justify-content-end">
-                                <a href="cinema/{{card.comp_project_id}}" class="btn btn-primary">Изучить проект</a>
-                            </div>
+                            <a href="cinema/{{card.comp_project_id}}" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
