--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -119,7 +119,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{card.subproject_name}}</h5>
                         <p class="card-text">{{card.subproject_description}}</p>
-                        <button class="btn btn-primary subscribeButton">Записаться</button>
+                        <button class="btn btn-sm btn-outline-dark rounded-3 subscribeButton">Записаться</button>
                     </div>
                 </div>
             </div>
