--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -317,30 +317,30 @@
             </div>
             <div class="modal-body">
                 <div class="form-floating mb-4">
-                    <input type="text" class="form-control shadow-lg" id="floatingTitle" placeholder="Название проекта">
+                    <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingTitle" placeholder="Название проекта">
                     <label for="floatingTitle">Название проекта</label>
                 </div>
                 <div class="form-floating mb-4">
-                    <input type="text" class="form-control shadow-lg" id="floatingOrganization" placeholder="Название организации">
+                    <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingOrganization" placeholder="Название организации">
                     <label for="floatingOrganization">Название организации</label>
                 </div>
                 <div class="form-floating mb-4">
-                    <input type="email" class="form-control shadow-lg" id="floatingEmail" placeholder="Email">
+                    <input type="email" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingEmail" placeholder="Email">
                     <label for="floatingEmail">Email</label>
                 </div>
                 <div class="form-floating mb-4">
-                    <input type="text" class="form-control shadow-lg" id="floatingVacancy" placeholder="Кто необходим" aria-describedby="vacancyHelp">
+                    <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingVacancy" placeholder="Кто необходим" aria-describedby="vacancyHelp">
                     <label for="floatingVacancy" class="form-label">Кто необходим</label>
                     <div id="vacancyHelp" class="form-text">Перечислите должности участников.</div>
                 </div>
                 <div class="form-floating mb-4">
-                    <textarea class="form-control shadow-lg" id="floatingDescription" rows="3" col="4" placeholder="Описание проекта" aria-describedby="descriptionHelp"></textarea>
+                    <textarea class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingDescription" rows="3" col="4" placeholder="Описание проекта" aria-describedby="descriptionHelp"></textarea>
                     <label for="floatingDescription" class="form-label">Описание</label>
                     <div id="descriptionHelp" class="form-text">Кратко опишите идею своего проекта.</div>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="col btn btn-primary shadow-lg">Отправить</button>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-outline-dark rounded-3 col">Отправить</button>
             </div>
         </div>
     </div>
