--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -88,21 +88,33 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-    <nav class="navbar navbar-expand-sm position-fixed-top border-bottom shadow-lg nav-underline user-select-none">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm position-fixed-top shadow-lg border-bottom nav-underline user-select-none bg-light">
+        <div class="container-fluid ">
             <h2 class="logo d-flex justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
         <div class="collapse navbar-collapse overflow-auto justify-content-end col-8" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'main' %}>Главная</a>
+                    <a class="nav-link text-dark" href={% url 'main' %}>Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                    <a class="nav-link text-dark" href={% url 'completedProjects' %}>Выполненные проекты</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <section id="info">
+        <div class="bg-body-secondary p-3">
+            <h1 class="fs-1">Выполненные проекты</h1>
+            <p class="fs-5">Здесь мы гордимся результатами наших талантливых участников, представляя уникальные и инновационные проекты, которые вдохновляют и двигают вперед. Исследуйте наше портфолио, погружайтесь в разнообразие идей и готовьтесь к собственным творческим достижениям.</p>
+        </div>
+        <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
+            <svg  width="2560px" height="100px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100" xml:space="preserve" class="">
+                <polygon points="2560 0 2560 100 0 100" fill="white"></polygon>
+            </svg>
+        </div>
+    </section>
 
     <div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
         <div class="form-floating d-flex rounded-start" role="search">
@@ -113,27 +125,55 @@
         </div>
     </div>
 
-    <div class="grid mt-4">
-        <div class="row gy-3 gx-0 justify-content-around">
-        {% for card in cards%}
-             <div class="card shadow-lg col-6 rounded-4 border-2" style="max-width: 540px;">
-                <div class="row">
-                    <div class="col-md-4">
-                        {% if card.mediaExists %}
-                            <img class="rounded-start" style="width: 160px; height: 240px;" src= {{card.comp_project_preview.url}}>
-                        {% endif %}
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">{{card.comp_project_name}}</h5>
-                            <p class="card-text">{{card.comp_project_description}}</p>
-                            <a href="cinema/{{card.comp_project_id}}" class="stretched-link"></a>
+    <section id="projects">
+        <h1 class="fs-1 p-2">Проекты</h1>
+        <div class="container">
+            <div class="grid mt-4">
+                <div class="row gy-3 gx-0 justify-content-around">
+                {% for card in cards%}
+                     <div class="card shadow-lg col-6 rounded-4 border-2" style="max-width: 540px;">
+                        <div class="row">
+                            <div class="col-md-4">
+                                {% if card.mediaExists %}
+                                    <img class="rounded-start" style="width: 160px; height: 240px;" src= {{card.comp_project_preview.url}}>
+                                {% endif %}
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{card.comp_project_name}}</h5>
+                                    <p class="card-text">{{card.comp_project_description}}</p>
+                                    <a href="cinema/{{card.comp_project_id}}" class="stretched-link"></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                {% endfor %}
                 </div>
             </div>
-        {% endfor %}
         </div>
-    </div>
+    </section>
+
+    <section id="contacts">
+        <div class="container-fluid bg-light mt-4">
+            <h1 class="fs-1 col text-start">Контакты</h1>
+            <div class="row justify-content-center">
+                <div class="col-3">
+                    <h6>Контакты</h6>
+                    <ul>
+                        <li>Телефон: +7(000)-000-00-00</li>
+                        <li>Адрес: Ул.Пушкина, д. Колотушкина</li>
+                        <li>Почта: user@example.com</li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h6>Продукты</h6>
+                    <ul>
+                        <li>Наш университет</li>
+                        <li>Сайт цифровой школы</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     
 {% endblock content %}
