--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -106,10 +106,12 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-	<section id="preview" class="position-fixed-top mb-5">
-		<canvas id="vortex" width="800" height="300">
-        </canvas>
-		<div id="title">Проекты ЧелГУ.</div>
+	<section id="preview" class="mb-5">
+		<div class="container-fluid row-2 text-center">
+            <canvas id="vortex" class="img-fluid" width="800" height="300">
+            </canvas>
+            <h1 class="fs-1">Проекты ЧелГУ</h1>
+        </div>
 	</section>
 
     <section id="about us">
