--- a/Django/CSUProjects/templates/cinema.html
+++ b/Django/CSUProjects/templates/cinema.html
@@ -4,60 +4,148 @@
 {% block cssAndScripts %}
     {% load static%}
 
-    <script src= {% static "/src/JScripts/scrollCinema.js" %} defer></script>
-    <link rel="stylesheet" href= {% static "/css/scrollCinema.css" %}>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@v0.158.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@v0.158.0/examples/jsm/"
+            }
+        }
+        </script>
+    
+        <script type = "module" name="miniCSULogo" defer>
+            import * as THREE from 'three';
+            import {GLTFLoader} from 'three/addons/loaders/GLTFLoader'
+    
+            //Требуемые переменные и константы
+            let logo = null,                                              //Хранилище логотипа
+                canvas = document.querySelector(".logo");                //Канвас со спиралью
+    
+            const sizes = {
+                width: canvas.offsetHeight / 0.8,
+                height: canvas.offsetHeight / 0.9,
+            };
+    
+            //Создаём сцену с "бесконечным" пространством
+            const scene = new THREE.Scene();
+    
+            //Создаём камеру типа Перспектива с FOV 75 и 500/500
+            const camera = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 1000);
+            camera.position.set(0.2, 0, 2.1);
+            scene.add(camera);
+    
+            //Создаём отрисовщика с прозрачным фоном и сглаженными краями
+            const renderer = new THREE.WebGLRenderer({alpha: true, antialias: true});
+            renderer.setSize(sizes.width, sizes.height);
+            renderer.setClearColor(0x000000, 0);
+            renderer.domElement.setAttribute("id", "CSULogo");
+            {% comment %} var el = document.createElement('a');
+            el.setAttribute("id", "title");
+            el.href = '{% url 'main' %}';
+            el.setAttribute("class", "button");
+            el.appendChild(document.createTextNode('Проекты ЧелГУ.'));
+            renderer.domElement.appendChild(el); {% endcomment %}
+            canvas.insertBefore(renderer.domElement, canvas.firstChild);
+    
+            //Создаём пространственный свет
+            const aLight = new THREE.AmbientLight(0xeeeeee, 3);
+            scene.add(aLight);
+    
+            //Создаём точечный свет
+            const pLight = new THREE.PointLight(0xffffff, 10);
+            pLight.position.set(1, 1, 2);
+            scene.add(pLight);
+    
+            //Создаём загрузчик и запускаем функцию загрузги 
+            const loader = new GLTFLoader();
+            loader.load(
+                "/static/src/models/CSU.gltf",
+                (gltf) => {
+                    logo = gltf.scene.children[0];
+                    logo.scale.set(1.5, 1.5, 1.5);
+                    scene.add(logo);
+                }
+            );
+            //Создаём функцию анимации
+            const clock = new THREE.Clock();
+    
+            renderer.render(scene, camera);
+    
+            function tick(){
+                const elapsedTime = clock.getElapsedTime();
+                if (logo){
+                    logo.rotation.y = elapsedTime;
+                }
+                renderer.render(scene, camera);
+                window.requestAnimationFrame(tick);
+            };
+            tick();
+    
+        </script>
 
 {% endblock cssAndScripts %}
 
 {% block content %}
-<body style = "height: {{size}}px">
 
-    <nav class="navbar navbar-expand-sm position-fixed-top border-bottom shadow-lg nav-underline user-select-none">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm shadow-lg border-bottom nav-underline user-select-none bg-light">
+        <div class="container-fluid ">
             <h2 class="logo d-flex justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
         <div class="collapse navbar-collapse overflow-auto justify-content-end col-8" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'main' %}>Главная</a>
+                    <a class="nav-link text-dark" href={% url 'main' %}>Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                    <a class="nav-link text-dark" href={% url 'completedProjects' %}>Выполненные проекты</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <div class="container">
-        <section class = "gallery">
-            <div class="frame frameBG">
-                <div class="frameContent mFont">
-                    <h2>{{nameProject.comp_project_name}}</h2>
-                </div>
-            </div>
-            
-            {% for card in cards%}
-                <div class="frame">
-                    <div class= {% if card.isEven %} 'textBlurLeft' {% else %} 'textBlurRight' {% endif %}>
-                        <div class="frameContent mFont textLeft  blurContainer">
-                            <h3>{{card.worker_post}}</h3>
-                            <h4>{{card.worker_id.worker_full_name}}</h4>
-                            <p>{{card.worker_description}}</p>
+    <section id="slides" class="d-flex justify-content-center">
+        <div class="d-flex container-fluid justify-content-center align-self-center align-items-center py-2 px-5 sticky-top">
+            <div id="workersCarousel" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                    <div class="carousel-item active d-flex justify-content-center">
+                        <img src="https://toruskit.com/assets/img/util/slider-magenta-01.svg" class="img-fluid w-100 rounded-5 user-select-none" alt="">
+                        <div class="carousel-caption d-flex-column">
+                            <h4>{{nameProject.comp_project_name}}</h4>
+                            <h5>{{nameProject.comp_project_description}}</h5>
                         </div>
                     </div>
-                </div>
-
-                <div class="frame frameBG ">
-                    <div class="frameContent mFont">
-                        <img class={% if card.isEven %} "frameMedia frameMediaRight" {% else %} "frameMedia frameMediaLeft" {% endif %} src= {{card.worker_id.worker_photo.url}}>
-                        
-                        <!-- TODO: Нужно будет реализовать подругому, так как Django не может вставить картинку (img - это заглушка)
-                            <div class={% if card.side %} "frameMedia frameMediaRight" {% else %} "frameMedia frameMediaLeft" {% endif %} style="background-image: url(/src/img/img_2.jpg);"></div> -->
+                    {% for card in cards %}
+                    <div class="carousel-item d-flex justify-content-center">
+                        <img src="https://toruskit.com/assets/img/util/slider-violet-01.svg" class="img-fluid w-100 rounded-5 user-select-none" alt="">
+                        <div class="carousel-caption d-flex-column">
+                            <div class="card shadow-lg rounded-4 border-2">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <img class="rounded-start-4" src= {{card.worker_id.worker_photo.url}}>
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <div class="card-body">
+                                            <h4>{{card.worker_post}}</h4>
+                                            <h5>{{card.worker_id.worker_full_name}}</h5>
+                                            <p>{{card.worker_description}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+                <button class="carousel-control-prev" type="button" data-bs-target="#workersCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#workersCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
 
-        </section>
-    </div>
-</body>
 {% endblock content %}
