--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -311,9 +311,9 @@
 <div class="modal fade" id="invite-prj" tabindex="-1" aria-labelledby="label-invite-prj" aria-hidden="true" style="backdrop-filter: blur(10px)">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-3" id="label-invite-prj">Предложить проект</h1>
+            <div class="modal-header vstack border-0">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h1 class="modal-title fs-3" id="label-invite-prj">Предложить проект</h1>
             </div>
             <div class="modal-body">
                 <div class="form-floating mb-4">
@@ -339,7 +339,7 @@
                     <div id="descriptionHelp" class="form-text">Кратко опишите идею своего проекта.</div>
                 </div>
             </div>
-            <div class="modal-footer justify-content-center">
+            <div class="modal-footer justify-content-center border-0">
                 <button type="button" class="btn btn-outline-dark rounded-3 col">Отправить</button>
             </div>
         </div>
