--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -171,9 +171,9 @@
     <div class="modal fade" id="invite-prj" tabindex="-1" aria-labelledby="label-invite-prj" aria-hidden="true" style="backdrop-filter: blur(10px)">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-3" id="label-invite-prj">Записаться на проект</h1>
+                <div class="modal-header vstack border-0">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h1 class="modal-title fs-3" id="label-invite-prj">Записаться на проект</h1>
                 </div>
                 <div class="modal-body">
                     <div class="form-floating mb-4">
@@ -198,7 +198,7 @@
                         <div id="descriptionHelp" class="form-text">Расскажите нам немного о себе</div>
                     </div>
                 </div>
-                <div class="modal-footer justify-content-center">
+                <div class="modal-footer justify-content-center border-0">
                     <button type="button" class="btn btn-outline-dark rounded-3 col">Записаться</button>
                 </div>
             </div>
