--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -113,8 +113,8 @@
 
     <section id="about-project">
         <div class="bg-body-secondary p-3">
-            <h1 class="fs-1">Название проекта</h1>
-            <p class="fs-5">Здесь должно быть описание проекта</p>
+            <h1 class="fs-1">{{project.title}}</h1>
+            <p class="fs-5">{{project.description}}</p>
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100" xml:space="preserve" class="">
