--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -135,14 +135,14 @@
                         <div class="row">
                             <div class="col-md-4">
                                 {% if card.mediaExists %}
-                                    <img class="rounded-start" style="width: 160px; height: 240px;" src= {{card.photo.url}}>
+                                    <img class="rounded-start" style="width: 160px; height: 240px;" src= {{card.pid.photo.url}}>
                                 {% endif %}
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">{{card.title}}</h5>
-                                    <p class="card-text">{{card.description}}</p>
-                                    <a href="cinema/{{card.pid}}" class="stretched-link"></a>
+                                    <h5 class="card-title">{{card.pid.title}}</h5>
+                                    <p class="card-text">{{card.pid.description}}</p>
+                                    <a href="cinema/{{card.pid.pid}}" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid bg-light mt-4">
+        <div class="container-fluid bg-light mt-4 fixed-bottom">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-3">
