upd: views.py, index.html

--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -239,16 +239,16 @@
                         <p>С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
                         <div class="row mt-4 fs-5">
                             <div class="col-3">
-                                <span>99+</span>
-                                <span>Участников</span>
+                                <span>Участников:</span>
+                                <span>{{wcount}}</span>
                             </div>
                             <div class="col-3 row-2 border-start border-end border-dark mx-4 px-4">
-                                <span>100K+</span>
-                                <span>Проектов</span>
+                                <span>Проектов:</span>
+                                <span>{{pcount}}</span>
                             </div>
                             <div class="col-3">
-                                <span>32K+</span>
-                                <span>Выполненных проектов</span>
+                                <span>Выполненных проектов:</span>
+                                <span>{{cpcount}}</span>
                             </div>
                         </div>
                     </div>
