--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -239,17 +239,17 @@
                 <div class="row justify-content-around">
                     <div class="col-5 fs-4">
                         <p>С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
-                        <div class="row mt-4 fs-5">
-                            <div class="col-3">
-                                <span>Участников:</span>
+                        <div class="row mt-4 fs-5 justify-content-center text-center">
+                            <div class="col-sm-3">
+                                <span>Участников</span><br>
                                 <span>{{wcount}}</span>
                             </div>
-                            <div class="col-3 row-2 border-start border-end border-dark mx-4 px-4">
-                                <span>Проектов:</span>
+                            <div class="col-sm-3 row-2 border-start border-end border-dark px-4">
+                                <span>Проектов</span><br>
                                 <span>{{pcount}}</span>
                             </div>
-                            <div class="col-3">
-                                <span>Выполненных проектов:</span>
+                            <div class="col-sm-5">
+                                <span>Выполненных проектов</span><br>
                                 <span>{{cpcount}}</span>
                             </div>
                         </div>
@@ -269,18 +269,18 @@
                 <div class="row mt-5">
                     <div class="row justify-content-center mb-5">
                         <div class="col-sm-3 mb-3 mb-sm-0">
-                          <div class="card shadow-lg p-3">
+                          <div class="card shadow-lg p-3 h-100">
                             <div class="card-body text-center">
-                              <p class="card-text fs-6 text-start">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
+                              <p class="card-text fs-6">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
                               <a class="btn btn-outline-dark rounded-3" href={% url 'completedProjects' %}>Выполненные проекты</a>
                             </div>
                           </div>
                         </div>
 
                         <div class="col-sm-3 mb-3 mb-sm-0">
-                          <div class="card shadow-lg p-3">
+                          <div class="card shadow-lg p-3 h-100">
                             <div class="card-body text-center">
-                              <p class="card-text fs-6 text-start">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
+                              <p class="card-text fs-6">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
                               <button type="button" class="btn btn-outline-dark rounded-3" data-bs-toggle="modal" data-bs-target="#invite-prj">Предложить проект</button>
                             </div>
                           </div>
