--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -127,7 +127,7 @@
         <h1 class="fs-1 p-2">Подпроекты</h1>
         <div class="container">
             <div class="grid mt-5 mb-5">
-                <div class="row gy-3 gx-0 justify-content-around">
+                <div class="row gy-3 gx-0 justify-content-between">
                 {% for card in cards%}
                     <div class="card shadow-lg rounded-4 border-2" style="max-width: 540px;">
                         <div class="d-flex text-center">
@@ -145,7 +145,7 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid bg-light mt-4 fixed-bottom">
+        <div class="container-fluid bg-light mt-4 sticky-bottom">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-3">
