--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -98,7 +98,7 @@
 
     <script type="text/javascript" src={% static "/src/JScripts/vortexAnimation/V_constants.js" %} defer></script>
 	<script type="text/javascript" src={% static "/src/JScripts/vortexAnimation/V_engine.js" %} defer></script>
-	<script type="text/javascript" src={% static "/src/JScripts/showSubscriptionForm.js" %} defer> </script>
+    <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
     {% comment %} <script type="text/javascript" src={% static "/src/JScripts/CSULogo.js" %} defer></script> {% endcomment %}
 
 	<link rel="stylesheet" href={% static "/css/vortex.css" %}>
@@ -106,6 +106,33 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
+    <section id="themeChanger">
+        <div class="dropdown-end d-flex justify-content-end pt-2 pe-3">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                Выбор темы
+            </button>
+            <ul class="dropdown-menu" id="themeSwitch">
+                <li class="px-1">
+                    <button class="dropdown-item active rounded-2" type="button" id="lightBtn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high-fill" viewBox="0 0 16 16">
+                            <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
+                        </svg>
+                        Светлая
+                    </button>
+                </li>
+                <li><p class="dropdown-divider"></li>
+                <li class="px-1">
+                    <button class="dropdown-item rounded-2 d-flex" type="button" id="darkBtn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
+                            <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
+                        </svg>
+                        Тёмная
+                    </button>
+                </li>
+            </ul>
+          </div>
+    </section>
+
 	<section id="preview" class="mb-5">
 		<div class="container-fluid row-2 text-center">
             <canvas id="vortex" class="img-fluid" width="800" height="300">
@@ -310,7 +337,7 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid bg-light">
+        <div class="container-fluid">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-3">
