upd: add handler for smtp server

--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -175,45 +175,48 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     <h1 class="modal-title fs-3" id="label-invite-prj">Записаться на проект</h1>
                 </div>
-                <div class="modal-body">
-                    <div class="form-floating mb-4">
-                        <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingTitle" placeholder="Название проекта">
-                        <label for="floatingTitle">Имя</label>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <div class="form-floating mb-4">
+                            <input name="name" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingTitle" placeholder="Название проекта">
+                            <label for="floatingTitle">Имя</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <input name="second_name" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingOrganization" placeholder="Название организации">
+                            <label for="floatingOrganization">Фамилия</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <input name="group" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingOrganization" placeholder="Название организации">
+                            <label for="floatingOrganization">Группа</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <input name="email" type="email" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingEmail" placeholder="Email">
+                            <label for="floatingEmail">Email</label>
+                        </div>
+                        <div class="form-floating">
+                            <select name="subporject_name" class="form-select mb-4" id="floatingSelect" aria-label="select">
+                                <option selected>-----------------------</option>
+                                {% for card in cards %}
+                                <option value="{{vacancy.vid}}">{{card.title}}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="floatingSelect">Выберете интересующий вас подпроект</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <input name="vacancy" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingSubproject" placeholder="Email">
+                            <label for="floatingSubproject">Введите интересующую вас вакансию</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                            <textarea name="description" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingDescription" rows="3" col="4" placeholder="Описание проекта" aria-describedby="descriptionHelp"></textarea>
+                            <label for="floatingDescription" class="form-label">О себе</label>
+                            <div id="descriptionHelp" class="form-text">Расскажите нам немного о себе</div>
+                        </div>
                     </div>
-                    <div class="form-floating mb-4">
-                        <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingOrganization" placeholder="Название организации">
-                        <label for="floatingOrganization">Фамилия</label>
+                    <div class="modal-footer justify-content-center border-0">
+                        <button type="submit" class="btn btn-outline-dark rounded-3 col">Записаться</button>
                     </div>
-                    <div class="form-floating mb-4">
-                        <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingOrganization" placeholder="Название организации">
-                        <label for="floatingOrganization">Группа</label>
-                    </div>
-                    <div class="form-floating mb-4">
-                        <input type="email" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingEmail" placeholder="Email">
-                        <label for="floatingEmail">Email</label>
-                    </div>
-                    <div class="form-floating">
-                        <select class="form-select mb-4" id="floatingSelect" aria-label="select">
-                            <option selected>-----------------------</option>
-                            {% for card in cards %}
-                            <option value="{{vacancy.vid}}">{{card.title}}</option>
-                            {% endfor %}
-                        </select>
-                        <label for="floatingSelect">Выберете интересующий вас подпроект</label>
-                    </div>
-                    <div class="form-floating mb-4">
-                        <input type="email" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingSubproject" placeholder="Email">
-                        <label for="floatingSubproject">Введите интересующую вас вакансию</label>
-                    </div>
-                    <div class="form-floating mb-4">
-                        <textarea class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingDescription" rows="3" col="4" placeholder="Описание проекта" aria-describedby="descriptionHelp"></textarea>
-                        <label for="floatingDescription" class="form-label">О себе</label>
-                        <div id="descriptionHelp" class="form-text">Расскажите нам немного о себе</div>
-                    </div>
-                </div>
-                <div class="modal-footer justify-content-center border-0">
-                    <button type="button" class="btn btn-outline-dark rounded-3 col">Записаться</button>
-                </div>
+                </form>
             </div>
         </div>
     </div>
