upd: index.html, themeToggle.js - fix svg color

--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -147,8 +147,12 @@
             <p class="fs-5">Виртуальное пространство, где инновации и знания сливаются в единое целое! Наш хостинг - это результат коллективных усилий университета, предоставляющий инфраструктуру для запуска и поддержки разнообразных проектов, подпроектов и исследовательских инициатив.Мы предоставляем пространство и ресурсы для развертывания разнообразных проектов, от исследовательских и учебных до инновационных и творческих инициатив.
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100" xml:space="preserve" class="">
-                <polygon points="2560 0 2560 100 0 100" fill="white"></polygon>
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,150.000000) scale(1.000000,-0.100000)" fill="white" class="svgObj">
+                    <path d="M1915 1509 c-151 -35 -317 -106 -521 -222 -364 -206 -608 -307 -884
+                    -363 -142 -29 -328 -38 -452 -21 l-58 7 0 -455 0 -455 1000 0 1000 0 0 760 0
+                    760 -22 -1 c-13 -1 -41 -5 -63 -10z"/>
+                </g>
             </svg>
         </div>
     </section>
@@ -277,7 +281,13 @@
 
     <section id="metrics">
         <div class="shape shape-bottom shape-fluid-x text-gray-200">
-            <svg viewBox="0 0 1440 280" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z" fill="#e9ecef"></path></svg>
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet" class="bg-body-secondary">
+                <g transform="translate(0.000000,175.000000) scale(1.000000,-0.100000)" fill="white" class="svgObj">
+                    <path d="M0 1610 l0 -389 63 -51 c79 -64 118 -83 242 -116 164 -44 405 -37
+                    600 18 89 24 260 91 349 135 168 84 366 149 526 172 41 6 108 19 148 28 l72
+                    17 0 288 0 288 -1000 0 -1000 0 0 -390z"/>
+                </g>
+            </svg>
         </div>
         <div class="container-fluid bg-body-secondary">
             <h1 class="fs-1 p-3">Единство Творческих Умов</h1>
