fix: added load script

--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -99,6 +99,7 @@
     <script type="text/javascript" src={% static "/src/JScripts/vortexAnimation/V_constants.js" %} defer></script>
 	<script type="text/javascript" src={% static "/src/JScripts/vortexAnimation/V_engine.js" %} defer></script>
 	<script type="text/javascript" src={% static "/src/JScripts/showSubscriptionForm.js" %} defer> </script>
+    <script type="text/javascript" src= {% static "/src/JScripts/search.js" %} defer></script>
     {% comment %} <script type="text/javascript" src={% static "/src/JScripts/CSULogo.js" %} defer></script> {% endcomment %}
 
 	<link rel="stylesheet" href={% static "/css/vortex.css" %}>
@@ -190,7 +191,7 @@
                     </div>
                 </form>
             </div>
-            
+
         <div class="container">
             <div class="grid mt-4">
                 <div class="row gy-5 gx-0 justify-content-between">
