upd: completedProjects, subProjects.html

--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -188,7 +188,7 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid mt-4 sticky-bottom">
+        <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-3">
